--- a/R/modulo1_tema4_R.Rmd
+++ b/R/modulo1_tema4_R.Rmd
@@ -59,45 +59,7 @@ El *Data science* permite transformar datos en conocimiento. El objetivo es apre
 
 <br>
 
-Consiste en comprender la evolución de la riqueza y la esperanza de vida de las personas a nivel de país y continente.
-
-Para ello, contamos con los datos de [países](https://www.rdocumentation.org/packages/datos/versions/0.3.0/topics/paises) coleccionados por [Gapminder](https://www.gapminder.org/) y traducidos al Castellano en el package [datos](https://cran.r-project.org/web/packages/datos/index.html).  
-
-<br>
-
-```{r}
-library(datos)
-paises07 <- as.data.frame(paises %>% filter(anio==2007))
-```
-
-```{r, eval=FALSE}
-paises07 %>% head(10)
-```
-
-<br>
-
-```{r echo=FALSE, results='hide', warning=FALSE}
-kable(paises07%>%head(10), "html", booktabs=TRUE) %>%
-  kable_styling(bootstrap_options=c("striped", "hover", "condensed", "responsive")
-                ,font_size = 11,full_width = F) %>%
-  save_kable("www/pasies07.png")
-```
-
-\<imagen1\>Fuente: http://www.gapminder.org/data/ (www/pasies07.png){width=400px}
-
-<br>
-
-Los datos muestran la esperanza de vida media en 142 países, población total y su nivel de riqueza medido con el [Producto Interior Bruto (PIB)](https://es.wikipedia.org/wiki/Producto_interno_bruto) per cápita.
-
-<br>
-
-> \<recuerda\>El PIB per cápita se puede interpretar como el Salario medio que recibe cada persona del país.\</recuerda\>
-
-<br>
-
-Para el análisis, el continente se recodificará incorporando Oceanía con Asia. 
-
-Para realizar el informe, nos apoyaremos en el package Rmarkdown.
+Ve al documento de la actividad guiada 1 de Programación en R y lee la exposición de la tarea.
 
 <br>
 
