--- a/R/modulo1_tema4_R_03_colec_obj.Rmd
+++ b/R/modulo1_tema4_R_03_colec_obj.Rmd
@@ -445,6 +445,8 @@ kable(a, "html", booktabs=TRUE,align="r", row.names = TRUE) %>%
   save_kable("www/dataframe.png")
 ```
 
+![](www/dataframe.png){width=125px}
+
 \<imagen1\>(www/dataframe.png){width=125px}
 
 <br>
@@ -499,6 +501,8 @@ kable(head(paises07), "html", booktabs=TRUE,align="r", row.names = TRUE) %>%
   save_kable("www/headpaises07.png")
 ```
 
+![](www/headpaises07.png){width=450px}
+
 \<imagen1\>(www/headpaises07.png){width=450px}
 
 <br>
@@ -535,6 +539,8 @@ kable(paises07[c(4,6), 4, drop=FALSE], "html", booktabs=TRUE,align="r", row.name
   save_kable("www/headpaises070.png")
 ```
 
+![](www/headpaises070.png){width=125px}
+
 \<imagen1\>(www/headpaises070.png){width=125px}
 
 <br>
@@ -554,6 +560,8 @@ kable(head(paises07[c(4,6),]), "html", booktabs=TRUE,align="r", row.names = TRUE
   column_spec(1:ncol(head(paises07[c(4,6),])),monospace=TRUE ) %>%
   save_kable("www/headpaises071.png")
 ```
+
+![](www/headpaises071.png){width=450px}
 
 \<imagen1\>(www/headpaises071.png){width=450px}
 
@@ -600,6 +608,8 @@ kable(head(paises07[,-c(3,5)]), "html", booktabs=TRUE,align="r", row.names = TRU
   save_kable("www/headpaises072.png")
 ```
 
+![](www/headpaises072.png){width=350px}
+
 \<imagen1\>(www/headpaises072.png){width=350px}
 
 <br>
@@ -625,6 +635,8 @@ kable(head(paises07[, c("pais","esperanza_de_vida")]), "html", booktabs=TRUE,ali
   column_spec(1:ncol(head(paises07[, c("pais","esperanza_de_vida")])),monospace=TRUE ) %>%
   save_kable("www/headpaises073.png")
 ```
+
+![](www/headpaises073.png){width=200px}
 
 \<imagen1\>(www/headpaises073.png){width=200px}
 
@@ -671,6 +683,8 @@ kable(head(paises07[,c(FALSE, FALSE, FALSE, TRUE, FALSE, TRUE)]), "html", bookta
   save_kable("www/headpaises074.png")
 ```
 
+![](www/headpaises074.png){width=200px}
+
 \<imagen1\>(www/headpaises074.png){width=200px}
 
 <br>
@@ -692,6 +706,8 @@ kable(paises07[paises07$continente=="Oceanía",], "html", booktabs=TRUE,align="r
   column_spec(1:ncol(paises07[paises07$continente=="Oceanía",]),monospace=TRUE ) %>%
   save_kable("www/headpaises075.png")
 ```
+
+![](www/headpaises075.png){width=200px}
 
 \<imagen1\>(www/headpaises075.png){width=200px}
 
@@ -723,6 +739,8 @@ kable(a, "html", booktabs=TRUE,align="r", row.names = TRUE) %>%
   column_spec(1,monospace=TRUE ) %>%
   save_kable("www/logicos1.png")
 ```
+
+![](www/logicos1.png){width=350px}
 
 \<imagen1\>Operadores lógicos: (fuente: elaboración propia) (www/logicos1.png){width=350px}
 
@@ -778,6 +796,8 @@ kable(a, "html", booktabs=TRUE,align="r", row.names = TRUE) %>%
   save_kable("www/logicos2.png")
 ```
 
+![](www/logicos2.png){width=450px}
+
 \<imagen1\>Operaciones booleanas: (fuente: elaboración propia) (www/logicos2.png){width=450px}
 
 <br>
@@ -803,6 +823,8 @@ kable(consulta, "html", booktabs=TRUE,align="r", row.names = TRUE) %>%
   column_spec(1:ncol(consulta),monospace=TRUE ) %>%
   save_kable("www/logicos3.png")
 ```
+
+![](www/logicos3.png){width=450px}
 
 \<imagen1\>(www/logicos3.png){width=450px}
 
@@ -889,6 +911,8 @@ kable(head(paises07), "html", booktabs=TRUE,align="r", row.names = TRUE) %>%
   save_kable("www/headpaises076.png")
 ```
 
+![](www/headpaises076.png){width=500px}
+
 \<imagen1\>(www/headpaises076.png){width=500px}
 
 <br>
@@ -968,6 +992,8 @@ kable(summary(paises07NA), "html", booktabs=TRUE,align="r", row.names = TRUE,) %
   save_kable("www/paisesNA1.png")
 ```
 
+![](www/paisesNA1.png){width=550px}
+
 \<imagen1\>(www/paisesNA1.png){width=550px}
 
 <br>
@@ -991,6 +1017,8 @@ kable(paises07NA[is.na(paises07NA$pib_per_capita),], "html", booktabs=TRUE,align
   save_kable("www/paisesNA2.png")
 options(knitr.kable.NA = '')
 ```
+
+![](www/paisesNA2.png){width=450px}
 
 \<imagen1\>(www/paisesNA2.png){width=450px}
 
@@ -1020,6 +1048,8 @@ kable(paises07NA[paises07NA$pib_per_capita<500,], "html", booktabs=TRUE,align="r
 options(knitr.kable.NA = '')
 ```
 
+![](www/paisesNA21.png){width=450px}
+
 \<imagen1\>(www/paisesNA21.png){width=450px}
 
 <br>
@@ -1043,6 +1073,8 @@ kable(paises07NA[which(paises07NA$pib_per_capita<500),], "html", booktabs=TRUE,a
   save_kable("www/paisesNA3.png")
 options(knitr.kable.NA = '')
 ```
+
+![](www/paisesNA3.png){width=450px}
 
 \<imagen1\>(www/paisesNA3.png){width=450px}
 
