--- a/R/ppt/modulo1_tema4_R_ppt.Rmd
+++ b/R/ppt/modulo1_tema4_R_ppt.Rmd
@@ -9,7 +9,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.path="www/")
+knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
 library(pander)
 library(kableExtra)
